--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 .btn{
-  background-color: #ba0b0b; /* Green */
+  background-color: #ba0b0b;
   border: none;
   text-align: center;
   border-radius: 8px;
@@ -16,11 +16,11 @@
 
 * { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-html { width: 100%; height:100%; overflow:hidden; }
+html { width: auto; height:auto; overflow: scroll;}
 
 body {
-	width: 100%;
-	height:100%;
+	width: auto;
+	height:auto;
 	font-family: 'Open Sans', sans-serif;
 	background: #331952;
 	color: #fff;
